# my-awesome-project

./: .gitmodules  CMakeLists.txt  org.kde.kirigami_db.desktop  org.kde.kirigami_db.json  org.kde.kirigami_db.metainfo.xml
src/: CMakeLists.txt  about.cpp  about.h  app.cpp  app.h  cardlistviewsqlquerymodel.cpp  cardlistviewsqlquerymodel.h  kirigami_dbconfig.kcfg  kirigami_dbconfig.kcfgc  main.cpp  resources.qrc
src/contents/ui/: About.qml  main.qml
